# cppunittest

./: .gitignore  CMakeLists.txt  LICENSE  README.md  configure
CMake/: cppunittest.cmake  cppunittest_add_tests.cmake  cppunittest_post_build_callback.cmake
src/cppunittest/: driver.cpp  unittest.cpp  unittest.hpp
